--- a/src/_posts/news/2016-07-24-website.md
+++ b/src/_posts/news/2016-07-24-website.md
@@ -8,5 +8,5 @@ category: news
 The Dayton Data Visualization website has been launched! We're excited to be
 able to bring this resource to the community and hope it will become something
 everyone will consider contributing to. Check out the source code on
-[GitHub](http://github.com/daytondv/www.daytondv.com)
+[GitHub](http://github.com/daytondv/www.daytondv.org)
 and help us make the site even better!
